--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             <img src="./Img/cvprofilbild.jpg" class="portrait" alt="Portrait">
             <h1>Hello World!</h1>
             <p class="intro">My name is Jesper Witt and my dream is to become a web developer.</p>
-            <a href="https://github.com/Jesperwi/WebsitePortfolio.git" class="button" target="_blank">Check out my code!</a>
+            <a href="https://github.com/Jesperwi/Website-Portfolio" class="button" target="_blank">Check out my code!</a>
         </div>
 
 
