--- a/work.html
+++ b/work.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./CSS/style.production.css">
-    <link rel="shortcut icon" href="./Img/faviconWolf.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="./Img/Google-Noto-Emoji-Animals-Nature-22218-fox-face.ico" type="image/x-icon">
     <link href="https://fonts.googleapis.com/css2?family=Hachi+Maru+Pop&family=Roboto:wght@900&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,500;1,400&display=swap" rel="stylesheet">
     <title>My work</title>
