--- a/index.html
+++ b/index.html
@@ -32,9 +32,9 @@
         <span style="color: rgb(221, 68, 68);">Jesper Witt</span> and my current dream is to become a web developer.
          I started my web developer <span style="color: rgb(221, 68, 68);">journey</span>
         in October 2020 on Careerfoundry.com.
-        I've always had a big interest for <span style="color: rgb(221, 68, 68);">computers</span> 
-        and <span style="color: rgb(221, 68, 68);">design</span>, so I decided to change my career. My major was <span style="color: rgb(221, 68, 68);">firefighter</span> and <span style="color: rgb(221, 68, 68);">security</span>, this line of work taught me alot but 
-        when I <span style="color: rgb(221, 68, 68);">travelled</span> the world to South Korea were I lived for quite some time. This is what made me <span style="color: rgb(221, 68, 68);">realise</span> how big this world is and with 
+        I've always had a big interest in <span style="color: rgb(221, 68, 68);">computers</span> 
+        and <span style="color: rgb(221, 68, 68);">design</span>, so I decided to change my career. My major was <span style="color: rgb(221, 68, 68);">Firefighting</span> and Security</span>, this line of work taught has me alot. But 
+        when I <span style="color: rgb(221, 68, 68);">travelled</span> the world to South Korea there I lived for quite some time. This is made me <span style="color: rgb(221, 68, 68);">realise</span>, how big this world is. With 
         my creativity I might be able to travel the world while working as a web developer. 
         This is my <span style="color: rgb(221, 68, 68);">web developer</span> portfolio website.
     </br> Hope you <span style="color: rgb(221, 68, 68);">enjoy</span> it!
