--- a/about.html
+++ b/about.html
@@ -31,7 +31,7 @@
 <div class="aboutBlock">
   <h1 class="aboutHead">About me,</h1>
   <p class="aboutMe">I'm Jesper! I was born and raised in Sweden, in a town which called Malmö. 
-  From a young age, I've always had an interest in <span style="color: rgb(221, 68, 68);">technology</span> and computers. To be honest,
+  From a young age I've had a strong interest in <span style="color: rgb(221, 68, 68);">technology</span> and computers. To be honest,
     it started with Nintendo gaming consoles <img class="breadIcon" src="Img/cute-toast-emoji-transparent-png-svg-vector-file-cute-toast-icons-png-512_512.png">
     I attended graphic <span style="color: rgb(221, 68, 68);">design</span> school and I took my major in firefighting and security. After discovering coding in South Korea I really fell in <span style="color: rgb(221, 68, 68);">love</span> with it
     and felt that this fits for me. I feel very much excited to start on some new projects and see what the future has to offer.
