--- a/work.html
+++ b/work.html
@@ -43,35 +43,35 @@
         <a href="https://github.com/Jesperwi/Pokedex.git" target="_blank"><Img class="gitHu" src="./Img/GitHub-Mark-Light-64px.png"></a>
     </div>
     <div class="grid__item">
-        <a href="https://myflixjw.netlify.app/"><img class="imgItem" src="./Img/myflixview.png"></a>
+        <a href="https://myflixjw.netlify.app/" target="_blank"><img class="imgItem" src="./Img/myflixview.png"></a>
         <p>
             On this project, I created an app with the framework React. Using React and my own API and fixing endpoints with Postman, Users are able to login and watch the movie info that are displayed.
         </p>
         <a href="https://github.com/Jesperwi/myFlix-client" target="_blank"><Img class="gitHu" src="./Img/GitHub-Mark-Light-64px.png"></a>
     </div>
     <div class="grid__item">
-        <h2>Meet Event App</h2>
+        <a href="https://jesperwi.github.io/meet/" target="_blank"><img class="imgItemMeet" src="./Img/meetup.png"></a>
         <p>
             A serverless, PWA made with React using a test-driven development technique. This application uses the google calendar API to fetch events.
         </p>
         <a href="https://github.com/Jesperwi/meet.git" target="_blank"><Img class="gitHu" src="./Img/GitHub-Mark-Light-64px.png"></a>
     </div>
     <div class="grid__item">
-        <h2>Mobile Chat App</h2>
+        <img class="imgItemMobile" src="./Img/mobile app photo.jpg">
         <p>
         Chat app made with React Native and expo. The app will provide users with a chat interface and options to share images and their location.
         </p>
         <a href="https://github.com/Jesperwi/Android-Chat.git" target="_blank"><Img class="gitHu" src="./Img/GitHub-Mark-Light-64px.png"></a>
     </div>
     <div class="grid__item">
-        <h2>Angular Myflix App</h2>
+        <a href="https://myflixangularjw.netlify.app/" target="_blank"><img class="imgItem" src="./Img/myflixangular.png"></a>
         <p>
         An Angular app made for users to read about movies and collect their favorties.
         </p>
         <a href="https://github.com/Jesperwi/myFlix_Angular_client.git" target="_blank"><Img class="gitHu" src="./Img/GitHub-Mark-Light-64px.png"></a>
     </div>
     <div class="grid__item">
-        <h2>Api Creation</h2>
+        <h2>myFlix-Api</h2>
         <p>
             Using Node, SQL, MongoDB I created a database with REST API. With the help of JWT(Token-based) I made the API Authentication safe. 
         </p>
