--- a/about.html
+++ b/about.html
@@ -42,7 +42,7 @@
 
 <div class="buttonPosition">
 <div class="button">
-  <a href="files/cv.pdf" class="cvButton" download>MY RESUME</a>
+  <a href="https://drive.google.com/uc?export=download&id=1SeV53QCRfEZtlOBl0gjHoelM5LFQbW1b" class="cvButton" download>MY RESUME</a>
 </div>
 </div>
 
