case study added

--- a/about.html
+++ b/about.html
@@ -36,13 +36,14 @@
     I attended graphic <span style="color: rgb(221, 68, 68);">design</span> school and I took my major in firefighting and security. After discovering coding in South Korea I really fell in <span style="color: rgb(221, 68, 68);">love</span> with it
     and felt that this fits for me. I feel very much excited to start on some new projects and see what the future has to offer.
     In my free time I prefer to spend time doing some exercise or have a delicious meal with an acquaintance. Having done the 
-  </br><span style="color: rgb(221, 68, 68);">full-stack developer</span> course I have experienced different programs such as HTML, CSS, JavaScript and <span style="color: rgb(221, 68, 68);">React</span>.     
+  </br><span style="color: rgb(221, 68, 68);">full-stack developer</span> course I have experienced different programs such as HTML, CSS, JavaScript and 
+  <span style="color: rgb(221, 68, 68);">React</span>.     
   </p>
 </div>
 
 <div class="buttonPosition">
 <div class="button">
-  <a href="https://drive.google.com/uc?export=download&id=1SeV53QCRfEZtlOBl0gjHoelM5LFQbW1b" class="cvButton" download>MY RESUME</a>
+  <a href="https://drive.google.com/uc?export=download&id=1EXiwYxCgkS8o46PftJeOirsXWcruTpwY" class="cvButton" download>MY RESUME</a>
 </div>
 </div>
 
