--- a/work.html
+++ b/work.html
@@ -47,7 +47,8 @@
         <p>
             On this project, I created an app with the framework React. Using React and my own API and fixing endpoints with Postman, Users are able to login and watch the movie info that are displayed.
         </p>
-        <a href="https://github.com/Jesperwi/myFlix-client" target="_blank"><Img class="gitHu" src="./Img/GitHub-Mark-Light-64px.png"></a>
+            <a href="https://github.com/Jesperwi/myFlix-client" target="_blank"><Img class="gitHu" src="./Img/GitHub-Mark-Light-64px.png"></a>
+            <a href="https://jwcasestudy.netlify.app/" class="caseLink" target="_blank" style="color: white; text-decoration: none; padding-left: 10px;">Case Study</a>
     </div>
     <div class="grid__item">
         <a href="https://jesperwi.github.io/meet/" target="_blank"><img class="imgItemMeet" src="./Img/meetup.png"></a>
