--- a/work.html
+++ b/work.html
@@ -36,11 +36,11 @@
 <section class="works">
 <div class="grid">
     <div class="grid__item">
-        <a href="https://pokedexx-git-main.jesperwi.vercel.app/" target="_blank"><img class="imgItem" src="./Img/pokedexview.png"></a>
+        <a href="https://oliviablog.netlify.app/" target="_blank"><img class="imgItem" src="./Img/bloggen.png"></a>
         <p>
-            On this project, I created a Pokedex with the help of Javascript, HTML and CCS. Data is pulled from an external API and enable different datapoints in detail.
+            For this project I've been using nodejs, react and aws s3 buckets to make a pretty blog with a protected user that is able to upload and write their own blog posts.
         </p>
-        <a href="https://github.com/Jesperwi/Pokedex.git" target="_blank"><Img class="gitHu" src="./Img/GitHub-Mark-Light-64px.png"></a>
+            <a href="https://github.com/Jesperwi/Oblog_React" target="_blank"><Img class="gitHu" src="./Img/GitHub-Mark-Light-64px.png"></a>
     </div>
     <div class="grid__item">
         <a href="https://myflixjw.netlify.app/" target="_blank"><img class="imgItem" src="./Img/myflixview.png"></a>
@@ -49,6 +49,13 @@
         </p>
             <a href="https://github.com/Jesperwi/myFlix-client" target="_blank"><Img class="gitHu" src="./Img/GitHub-Mark-Light-64px.png"></a>
             <a href="https://jwcasestudy.netlify.app/" class="caseLink" target="_blank" style="color: white; text-decoration: none; padding-left: 10px;">Case Study</a>
+    </div>
+    <div class="grid__item">
+        <a href="https://pokedexx-git-main.jesperwi.vercel.app/" target="_blank"><img class="imgItem" src="./Img/pokedexview.png"></a>
+        <p>
+            On this project, I created a Pokedex with the help of Javascript, HTML and CCS. Data is pulled from an external API and enable different datapoints in detail.
+        </p>
+        <a href="https://github.com/Jesperwi/Pokedex.git" target="_blank"><Img class="gitHu" src="./Img/GitHub-Mark-Light-64px.png"></a>
     </div>
     <div class="grid__item">
         <a href="https://jesperwi.github.io/meet/" target="_blank"><img class="imgItemMeet" src="./Img/meetup.png"></a>
