added project link

--- a/index.html
+++ b/index.html
@@ -56,6 +56,9 @@
         <li class="mediaS"><a href="https://www.linkedin.com/in/jesper-witt-1a9b661a6/" target="_blank">
         LINKEDIN
         </a>
+        <li class="mediaS"><a href="./work.html">
+            PROJECTS
+        </a></li>
     </ul>
 </footer>
 
