overwatch clone added

--- a/work.html
+++ b/work.html
@@ -38,7 +38,7 @@
     <div class="grid__item">
         <a href="https://oliviablog.netlify.app/" target="_blank"><img class="imgItem" src="./Img/bloggen.png"></a>
         <p>
-            For this project I've been using nodejs, react and aws s3 buckets to make a pretty blog with a protected user that is able to upload and write their own blog posts.
+            For this project I've been using nodejs, react and aws s3 buckets to make a pretty blog with a protected user that is able to upload and write their own blog posts. Since I'm using Heroku for the api, let the page load a little to see the blog posts.
         </p>
             <a href="https://github.com/Jesperwi/Oblog_React" target="_blank"><Img class="gitHu" src="./Img/GitHub-Mark-Light-64px.png"></a>
     </div>
@@ -49,6 +49,13 @@
         </p>
             <a href="https://github.com/Jesperwi/myFlix-client" target="_blank"><Img class="gitHu" src="./Img/GitHub-Mark-Light-64px.png"></a>
             <a href="https://jwcasestudy.netlify.app/" class="caseLink" target="_blank" style="color: white; text-decoration: none; padding-left: 10px;">Case Study</a>
+    </div>
+    <div class="grid__item">
+        <a href="https://jwioverwatch.netlify.app/" target="_blank"><img class="imgItem" src="./Img/overwatchclone.png"></a>
+        <p>
+            Made an Overwatch Clone website using React and styled components. Since styling and details is important I wanted to make this clone to improve my design and web building skills. "Under Construction"
+        </p>
+            <a href="https://github.com/Jesperwi/OverwatchClone" target="_blank"><Img class="gitHu" src="./Img/GitHub-Mark-Light-64px.png"></a>
     </div>
     <div class="grid__item">
         <a href="https://pokedexx-git-main.jesperwi.vercel.app/" target="_blank"><img class="imgItem" src="./Img/pokedexview.png"></a>
