work update for resume
munters ab implementation

--- a/contact.html
+++ b/contact.html
@@ -28,7 +28,7 @@
     <div class="contactWrapper">
         <h1 class="contactHead">CONTACT INFO</h1>
         <div class="informationContact">
-            <p>I am <span style="color: white;">available</span> for work.</br>Reach me on any of my <span style="color: white;">contacts!</span></p>
+           Reach me <span style="color: white;">on</span>!</p>
         </div>
     </div>
     <div class="emailLinkWrap">
