--- a/work.html
+++ b/work.html
@@ -26,11 +26,55 @@
             <h1 class="nav-logo"><a href="./index.html">W</a></h1> 
     </nav>
 
+    
 <div class="portfolioHead">
     <h1 class="portfolioHeader"><span 
         class="txt-rotate"
         data-period="4000"
-        data-rotate='[ "My Projects." ]'></span></h1>
+        data-rotate='[ "Work Projects." ]'></span></h1>
+</div>
+
+<section class="works">
+    <h1 class="work-title">Munters: AirC Cloud Service</h1>
+<div class="grid">
+    <div class="grid__item">
+        <img class="imgItem" src="./Img/Framsida-munters.png">
+        <p>
+            For this project, my colleague and I developed an app service for Munters AB, which is currently utilized by various companies. The User Login page allows users to view all their units, providing details such as names, temperatures, humidity, alarm status, connection status, and online status. The interface includes a navigation menu on the left, catering to both administration and regular users. The technology stack used for development includes Vue 3, Node.js, Express, and JEST.
+        </p>
+    </div>
+    <div class="grid__item">
+      <img class="imgItem" src="./Img/unit-overview.png">
+        <p>
+            When users access a unit, they are presented with an overview page that visually represents various statuses through a graph, created using a specific library. The page also features a unit header displaying different values, along with the option to modify these values or statuses.
+        </p>
+    </div>
+    <div class="grid__item">
+       <img class="imgItem" src="./Img/unit-values.png">
+        <p>
+            We added a feature to the unit, allowing users to not only view all its different values but also customize each one based on their preferences. This functionality encompasses notifications and alarm settings, along with the ability to modify specific values as desired.
+        </p>
+    </div>
+    <div class="grid__item">
+     <img class="imgItem" src="./Img/unit-notification.png">
+        <p>
+            We introduced a notifications card, requiring SMS verification for activation. Users have the flexibility to choose the timing and content of notifications, whether to receive them on their phone or via email.
+        </p>
+    </div>
+    <div class="grid__item">
+       <img class="imgItemMeet" src="./Img/unit-settings.png">
+        <p>
+            The unit offered extensive options for feature customization within the settings tab, presented exclusively to admin users. These features encompass the ability to update firmware, modify unit location and name settings, refresh the graph display, and specify the associated data table, among other functionalities.
+        </p>
+    </div>
+</div>
+</section>
+
+<div class="portfolioHead">
+    <h1 class="portfolioHeader"><span 
+        class="txt-rotate"
+        data-period="4000"
+        data-rotate='[ "Study Projects." ]'></span></h1>
 </div>
 
 <section class="works">
