text update work
text update work

--- a/work.html
+++ b/work.html
@@ -40,7 +40,7 @@
     <div class="grid__item">
         <img class="imgItem" src="./Img/Framsida-munters.png">
         <p>
-            For this project, my colleague and I developed an app service for Munters AB, which is currently utilized by various companies. The User Login page allows users to view all their units, providing details such as names, temperatures, humidity, alarm status, connection status, and online status. The interface includes a navigation menu on the left, catering to both administration and regular users. The technology stack used for development includes Vue 3, Node.js, Express, and JEST.
+            For this project, I worked on an app service for Munters AB, which is currently utilized by various companies. The User Login page allows users to view all their units, providing details such as names, temperatures, humidity, alarm status, connection status, and online status. The interface includes a navigation menu on the left, catering to both administration and regular users. The technology stack used for development includes Vue 3, Node.js, Express, and JEST.
         </p>
     </div>
     <div class="grid__item">
