--- a/work.html
+++ b/work.html
@@ -62,7 +62,7 @@
         </p>
     </div>
     <div class="grid__item">
-       <img class="imgItemMeet" src="./Img/unit-settings.png">
+       <img class="imgItem" src="./Img/unit-settings.png">
         <p>
             The unit offered extensive options for feature customization within the settings tab, presented exclusively to admin users. These features encompass the ability to update firmware, modify unit location and name settings, refresh the graph display, and specify the associated data table, among other functionalities.
         </p>
