--- a/work.html
+++ b/work.html
@@ -35,6 +35,35 @@
 </div>
 
 <section class="works">
+    <h1 class="work-title">Electrolux: Booking</h1>
+    <div class="grid">
+        <div class="grid__item">
+            <img class="imgItem" src="./Img/elek-main.png">
+            <p>
+                For this project, I worked on an app service for Electrolux AB, which is built with Flutter and Dart. The application allows the user to login and see news, bookings, and their machine status. The technology stack used for development includes Dart, Flutter, XML.
+            </p>
+        </div>
+        <div class="grid__item">
+          <img class="imgItem" src="./Img/elek-book.png">
+            <p>
+                When users select a laundry room, they are presented with an overview page that visually represents various statuses of the booking.
+            </p>
+        </div>
+        <div class="grid__item">
+         <img class="imgItem" src="./Img/elek-status.png">
+            <p>
+                We added a feature to see the machine status, allowing users to not only view all its different times but also see if its done or not.
+            </p>
+        </div>
+        <div class="grid__item">
+           <img class="imgItem" src="./Img/elek-profile.png">
+            <p>
+                The unit offered extensive options for feature customization within the settings tab, presented exclusively to the users. This means that the user can change password, email and also to enable notifications when the laundry is done.
+            </p>
+        </div>
+    </div>
+</section>
+    <section class="works">
     <h1 class="work-title">Munters: AirC Cloud Service</h1>
 <div class="grid">
     <div class="grid__item">
